--- a/PROLACTANCIA/app/src/main/res/layout/dolor_grietas.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/dolor_grietas.xml
@@ -57,20 +57,22 @@
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:scaleType="centerInside"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         app:srcCompat="@drawable/dolor_grietas_1" />
 
     <TextView
         android:id="@+id/txt_mensaje"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
+        android:gravity="center_vertical"
         android:layout_toStartOf="@+id/img_representativa"
-        android:textAlignment="viewStart"
+        android:textDirection="anyRtl"
         android:textSize="14sp" />
 
     <com.google.android.material.tabs.TabLayout
@@ -104,7 +106,7 @@
             android:id="@+id/tab_aliviar_dolor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Para aliviar la congestión" />
+            android:text="Para aliviar el dolor" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_moniliasis"
