--- a/PROLACTANCIA/app/src/main/res/layout/fragment_moniliasis.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_moniliasis.xml
@@ -90,8 +90,8 @@ lengua y en las encías, se trata de moniliasis, mal de boca, sarro o algodoncil
 
     <ImageView
         android:id="@+id/img_moniliasis"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:src="@drawable/dolor_grietas_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
