--- a/PROLACTANCIA/app/src/main/res/layout/abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/abceso.xml
@@ -57,6 +57,7 @@
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:scaleType="centerInside"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         app:srcCompat="@drawable/abceso_1" />
@@ -67,10 +68,10 @@
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_toStartOf="@+id/img_representativa"
-        android:textAlignment="viewStart"
         android:textSize="14sp" />
 
     <fragment
