--- a/PROLACTANCIA/app/src/main/res/layout/donacion.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/donacion.xml
@@ -57,18 +57,21 @@
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:scaleType="centerInside"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
+
         app:srcCompat="@drawable/donacion_1" />
 
     <TextView
         android:id="@+id/txt_mensaje"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
+        android:gravity="clip_vertical"
         android:layout_toStartOf="@+id/img_representativa"
         android:textAlignment="viewStart"
         android:textSize="14sp" />
