--- a/PROLACTANCIA/app/src/main/res/layout/menu_extraccion.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/menu_extraccion.xml
@@ -52,14 +52,13 @@
     <TextView
         android:id="@+id/txt_mensaje"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/bt_estimulacion"
+        android:layout_gravity="center_vertical"
         android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_toStartOf="@+id/img_representativa"
-        android:textAlignment="viewStart"
         android:textSize="14sp" />
 
     <ImageButton
