--- a/PROLACTANCIA/app/src/main/res/layout/pechos_congestionados.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/pechos_congestionados.xml
@@ -57,20 +57,25 @@
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:scaleType="centerInside"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         app:srcCompat="@drawable/pechos_cong_1" />
 
     <TextView
         android:id="@+id/txt_mensaje"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
+        android:paddingTop="5sp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_toEndOf="@+id/img_representativa"
-        android:textAlignment="viewEnd"
+        android:gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:textAllCaps="false"
+        android:textDirection="anyRtl"
         android:textSize="14sp" />
 
     <com.google.android.material.tabs.TabLayout
