--- a/PROLACTANCIA/app/src/main/res/layout/menu_frecuencia_lactar.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/menu_frecuencia_lactar.xml
@@ -38,7 +38,7 @@
         android:layout_toEndOf="@id/bt_atras"
         android:padding="5dp"
         android:paddingTop="15dp"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textSize="24sp" />
 
     <ImageButton
