--- a/PROLACTANCIA/app/src/main/res/layout/menu_extraccion.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/menu_extraccion.xml
@@ -34,6 +34,7 @@
         android:layout_height="75dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:padding="5dp"
         android:paddingTop="15dp"
         android:textAlignment="center"
